# atmolight

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  THIRDPARTY.md  TODO.md  conanfile.py
config/: example.yml
src/: CMakeLists.txt
src/atmoanalyzer/: CMakeLists.txt  analyzer.cpp  application.cpp  config.cpp  control_server.cpp  devices.cpp  open_cv_capture.cpp  request_handler.cpp  request_handler.hpp
src/atmoanalyzer/include/atmo/: analyzer.hpp  application.hpp  capture_device.hpp  config.hpp  control_server.hpp  devices.hpp  mode.hpp  open_cv_capture.hpp  types.hpp
src/atmoctrl/: CMakeLists.txt  atmoctrl.cpp
src/atmodevice/: CMakeLists.txt  device.cpp  serial_devices.cpp  spi_devices.cpp
src/atmodevice/include/atmo/: channel.hpp  device.hpp  serial_devices.hpp  spi_devices.hpp
src/atmolight/: CMakeLists.txt  atmolight.cpp
tests/: CMakeLists.txt
tests/atmoanalyzer/: CMakeLists.txt  test_analyzer.cpp
tests/atmodevice/: CMakeLists.txt
util/systemd/: atmolight.service
